# final-project

./: docker-compose.yml  start.sh  test.txt
Untitled Folder/next-connect/: index.ts  next.config.js  package.json  test.js
Untitled Folder/next-connect/controllers/: activeUser.controller.ts  bookmark.controller.ts  follower.controller.ts  following.controller.ts  info.Controller.ts  story.controller.ts  suggested.controller.ts  user.Controller.ts
Untitled Folder/next-connect/db/: index.ts
Untitled Folder/next-connect/interfaces/: index.ts
Untitled Folder/next-connect/models/: comment.model.ts  post.model.ts  user.model.ts
Untitled Folder/next-connect/pages/: _app.tsx
Untitled Folder/next-connect/utils/: sendError.ts
backed_python_image/: pyproject.toml  temp
backed_python_image/assistant/: main.py
backed_python_image/face-emotions/: .env
backed_python_image/face-emotions/mxnet_moon/: lightened_moon.py
backed_python_image/face-recognition/: README.md
backed_python_image/face-recognition/api/: data.json
backed_python_image/object-recognition/: model.h5
backed_python_image/video_summary/: README.md
backend_node/: .gitignore  Dockerfile  app.js  index.js  package.json  posts.json  test.js  userlist.json
backend_node/controllers/: activeUser.controller.js  bookmark.controller.js  follower.controller.js  following.controller.js  post.controller.js  suggested.controller.js  suhhested.controller.js  user.Controller.js
backend_node/controllers/post/: comment.controller.js  like.controller.js  post.controller.js
backend_node/models/: post.model.js  user.model.js
backend_node/routes/: activeUser.route.js  bookmark.route.js  follower.route.js  following.route.js  post.route.js  suggested.route.js  user.route.js
backend_python/: .gitignore  1632321177803.mp4.m4a  Dockerfile  db.sqlite3  dockerbuild.sh  main.py  pyproject copy.toml  pyproject.toml  read this file.md  temp  test.py
backend_python/AI-assistant/: Dockerfile  README.md  config.py  main.py  pyproject.toml  virtual.py
backend_python/Text_Summary/: main.py
backend_python/ai-lang/: Dockerfile  README.md  config.py  main.py  manifest.json  pyproject.toml
backend_python/assistant/: Dockerfile  all_cities.py  main.py  pyproject.toml
backend_python/chatbot/: Dockerfile  README.md  config.py  ignite.py  main.py  pyproject.toml
backend_python/cognitive-assistant/: config.py  main.py
backend_python/face-emotions/: Dockerfile  README.md  config.py  main.py  manifest.json  pyproject.toml
backend_python/face-recognition/: Dockerfile  config.py  main.py  pyproject.toml
backend_python/object-recognition/: Dockerfile  config.py  main.py  manifest.json  pyproject.toml
backend_python/text-summarization/: Dockerfile  README.md  main.py  pyproject.toml
backend_python/video-summary/: README.md  ignite.py  main.py  sum.py
backend_python/video_summary/: Dockerfile  ignite.py  main.py  pyproject.toml  sum.py
backend_python_image/: Dockerfile  main.py  pyproject.toml  test.txt
backend_python_image/Text_Summary/: README.md  main.py
backend_python_image/face-recognition/api/: images.py
backend_python_image/object-recognition/: model.py
backend_python_image/video_summary/: main.py  sum.py
final_sdk/: Dockerfile
helper/: MOCK_DATA (2).json  MOCK_DATA (3).json
lite-media/: .env.example  .gitignore  README.md  firebase.ts  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  test.js  tsconfig.json  txt.txt
lite-media/backend/controllers/: activeUser.controller.ts  bookmark.controller.ts  follower.controller.ts  following.controller.ts  info.Controller.ts  suggested.controller.ts  user.Controller.ts
lite-media/backend/db/: index.ts
lite-media/backend/interfaces/: index.ts
lite-media/backend/models/: post.model.ts
lite-media/backend/utils/: onError.ts  sendError.ts
lite-media/components/: BookmarkBody.tsx  Layout.tsx  showImage.tsx
lite-media/components/ActiveFriends/: activeFriendsBody.tsx  index.tsx
lite-media/components/AllModals/: Test.tsx  UploadCoverPic.tsx  UploadProfilePic.tsx  index.tsx  showImage.tsx  showOFModal.tsx
lite-media/components/ExploreUser/: index.tsx  suggestedUserBody.tsx
lite-media/components/Notification/: index.tsx
lite-media/components/OF/: Cartoonify.tsx  CognitiveAssistant.tsx  EdgeDetection.tsx  HandwritingEquationSolver.tsx  ImageOutpaint.tsx  ImageToText.tsx  PhotoToSketch.tsx  TextSummary.tsx  TextTranslate.tsx  index.tsx
lite-media/components/bookmark/: BookmarkBody.tsx
lite-media/components/createPost/: TextEditor.tsx  index.tsx
lite-media/components/explore/: index.tsx
lite-media/components/home/: Assistant.tsx  activeFriends.tsx  assistant.tsx  index.tsx  left.tsx  main.tsx  right.tsx  story.tsx  suggested.tsx  trends.tsx
lite-media/components/login/: LoginForm.tsx  index.tsx
lite-media/components/message/: Message.tsx  MessageBox.tsx  index.tsx  message.tsx  messageBody.tsx  test.index.tsx  test.message.tsx
lite-media/components/messageCopy/: index.tsx  messageBody.tsx
lite-media/components/navbar/: index.tsx  menuItems.tsx  notification.tsx
lite-media/components/notification/: index.tsx
lite-media/components/posts/: AddComment.tsx  Comments.tsx  DetailsPost.tsx  index.tsx  postBody.tsx  postFooter.tsx  postHeader.tsx  showPost.tsx  singlePost.tsx
lite-media/components/profile/: CoverImage.tsx  DisplayName.tsx  FollowUnfollow.tsx  ProfileImage.tsx  UserInfo.tsx  UserPosts.tsx  UserSelf.tsx  profileBody.tsx
lite-media/components/progress/: Loading.tsx  (+5 more)
lite-media/pages/: _app.tsx  active.tsx  bookmarks.tsx  explore.tsx  followers.tsx  following.tsx  index.tsx  login.tsx  message.tsx  notification.tsx  search.tsx  settings.tsx  signup.tsx  suggested.tsx  test.tsx
lite-media/state/: index.ts  stateProvider.tsx
lite-media/styles/: globals.css
lite-media/test/: text.txt
lite-media/util/: index.ts  interfaces.ts  posts.json  suggestedUser.json  tts.tsx
lite-media/utils/: trends.json
lite-media/validator/: index.ts
(+78 files in other folders)
