[tool.poetry]
name = "backend_python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
chatbotAI = "^0.3.1"
wikipedia = "^1.4.0"

mxnet = "^1.8.0"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
pandas = "^1.3.2"
opencv-python-headless = "4.5.1.48"
numpy = "1.21.0"
opencv-python = "^4.5.3"
face-recognition = "1.3.0"
opencv-contrib-python = "^4.5.3"
waitress = "^2.0.0"
Pillow = "^8.3.2"
breadability = "0.1.20"
certifi = "2017.7.27.1"
chardet = "3.0.4"
decorator = "4.0.11"
docopt = "0.6.2"
idna = "2.6"
imageio = "2.4.1"
lxml = "^4.6.3"
nltk = "3.2.5"
olefile = "0.44"
pysrt = "1.1.1"
pytube = "6.4.2"
requests = "^2.26.0"
six = "1.15.0"
sumy = "0.8.1"
tqdm = "4.27"
urllib3 = "1.22"
youtube_dl = "^2021.6.6"
moviepy = "<=2.0.0"
Flask = "^2.0.1"
validators = "^0.18.2"





[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
