[tool.poetry]
name = "backend_python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
youtube_dl = "^2021.6.6"
pysrt = "1.1.1"
imageio = "2.4.1"
chardet = "3.0.4"
nltk = "3.2.5"
sumy = "0.8.1"
Flask = "^2.0.1"
chatbotAI = "^0.3.1"
wikipedia = "^1.4.0"
validators = "^0.18.2"
moviepy = "<=2.0.0"
imageio-ffmpeg = "^0.4.5"
Flask-Cors = "^3.0.10"





[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
