[tool.poetry]
name = "ai-personal-voice-assistant-using-python"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
SpeechRecognition = "^3.8.1"
wikipedia = "^1.4.0"
ecapture = "^0.1.8"
wolframalpha = "^5.0.0"
requests = "^2.26.0"
pyttsx3 = "^2.90"
PyAudio = "^0.2.11"
comtypes = "^1.1.10"
openfabric-pysdk = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
