[tool.poetry]
name = "ai-lang"
version = "1.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
openfabric-pysdk = "^0.1.6"
torch = "^1.9.0"
wheel = "^0.37.0"
fasttext-wheel = "^0.9.2"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
