[tool.poetry]
name = "cognitive-assistant"
version = "1.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
openfabric-pysdk = "^0.1.6"
chatbotAI = "^0.3.1"
wikipedia = "^1.4.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

