[tool.poetry]
name = "face-emotions"
version = "1.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.9"
openfabric-pysdk = "^0.1.1"
tensorflow = "^2.6.0"
mxnet = "^1.8.0"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
pandas = "^1.3.2"
imageio = "^2.9.0"
opencv-python-headless = "4.5.1.48"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
