[tool.poetry]
name = "face-recognition2.0"
version = "1.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
openfabric-pysdk = "^0.1.6"
numpy = "1.21.1"
opencv-python = "^4.5.3"
face-recognition = "1.3.0"
opencv-contrib-python = "^4.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
