[tool.poetry]
name = "object-recognition"
version = "1.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.9"
openfabric-pysdk = "^0.1.6"
tensorflow = "^2.6.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
