[tool.poetry]
name = "text-summarization"
version = "1.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.8"
openfabric-pysdk = "^0.1.6"
sumy = "^0.8.1"
numpy = "^1.21.1"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
