[tool.poetry]
name = "test-pyton"
version = "1.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.8.10"
openfabric-pysdk = "^0.1.6"
Pillow = "^8.3.2"
breadability = "0.1.20"
certifi = "2017.7.27.1"
chardet = "3.0.4"
decorator = "4.0.11"
docopt = "0.6.2"
idna = "2.6"
imageio = "2.2.0"
lxml = "^4.6.3"
nltk = "3.2.5"
numpy = "^1.21.2"
olefile = "0.44"
pysrt = "1.1.1"
pytube = "6.4.2"
requests = "2.18.4"
six = "1.11.0"
sumy = "0.7.0"
tqdm = "4.11.2"
urllib3 = "1.22"
youtube_dl = "^2021.6.6"
moviepy = "<=2.0.0"
Flask = "^2.0.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
